# polynome-comparaison

./: CMakeLists.txt  LICENSE  README.md  config.json  note.md
include/: evaluation.h  regulator.h
log/: log.txt
misc/: evaluation4.m
python/: cmaes-impl.py
src/: cmaes-impl.cpp  evaluation.cpp  regulator.cpp
